# automatic-control-lab-projects

./: .gitignore  AGENTS.md  CONTRIBUTING.md  NOTICE.md  README.md  pyproject.toml  requirements.txt  run_all.m
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: c.yml  matlab.yml  validate.yml
c/: CMakeLists.txt  README.md
c/apps/: maglev_observer_demo.c  two_tank_demo.c
c/include/control_lab/: maglev_observer.h  two_tank.h
c/src/: maglev_observer.c  two_tank.c
c/tests/: test_maglev_observer.c  test_two_tank.c
docs/: architecture.md  manual-validation-checklist.md  methods-summary.md  project_context.md  project_status.md  results-summary.md  source-reconstruction-map.md  team-contributions-template.md  testing.md  verification-matrix.md
matlab/+control_lab/: rk4_step.m  rms_value.m  saturate.m  sustained_entry_time.m  tracking_metrics.m
matlab/tests/: TestControlLabUtilities.m  TestMaglevObserver.m
projects/active-suspension/: README.md  active_suspension_demo.m
projects/magnetic-levitation/: README.md  calculate_maglev_observer_metrics.m  design_maglev_observer.m  maglev_configuration.m  maglev_convergence_study.m  maglev_linear_model.m  maglev_nonlinear_dynamics.m  magnetic_levitation_demo.m  plot_maglev_observer_results.m  simulate_maglev_observer.m
projects/nonlinear-control-loops/: README.md  nonlinear_control_demo.m
projects/rotary-arm/: README.md  rotary_arm_demo.m
projects/two-tank-system/: README.md  two_tank_demo.m
tests/: test_maglev_observer.py  test_reference_models.py
validation/: __init__.py  generate_reference_figures.py  maglev_observer.py  numerics.py  reference_models.py  report.py
